feat: use max 3000px horizontal resolution

--- a/styles.css
+++ b/styles.css
@@ -378,3 +378,9 @@ header p {
     transform: translateY(0);
   }
 }
+
+.resolution-info {
+  margin: auto;
+  padding-top: 0.5rem;
+  font-size: 0.75rem;
+}
